2005-09-13  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/DecayConfig.h (Repository): this was really the .fh file for Hw64Decayer
	and has been renamed as such

2005-09-13  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/ExampleDecayer (Repository): removed the ExampleDecayer as it served little purpose
	and should be replaced by information on the Wiki.

2005-09-08  Pete's account  <Peter.Richardson@durham.ac.uk>

	* src/HerwigDefaults.in (Repository): changes for the new treatment of hadronization in partonic decays

	* Decay/Baryon/SU3BaryonDecupletOctetPhotonDecayer.cc (Repository): various minor bug fixes to the decays

2005-09-08  David Grellscheid  <dgrell@d2.phyip3.dur.ac.uk>

	* lib/Makefile.am: added libHwPartonicDecay.la to the list of libraries

2005-09-05  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Utilities/HerwigRun.cc: changes to documentation to remove some doxygen errors and more changes due to change in random numbers from ThePEG

2005-09-04  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Doc/tagfileThePEG.tag (Repository): changes to documentation so that include is not scanned by doxygen and duplicate base classes do not appear

	* Utilities/Kinematics.cc (Repository): Changes for the changes to random numbers from ThePEG and improvements to documentation

2005-09-01  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Decay/HwDecayHandler.icc (Repository): changes to partonic decays

2005-09-01  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/Partonic/BtoSGammaDecayer.fh (Repository): added new partonic decayers for b to s gamma and weak partonic decays

2005-09-01  Peter Richardson <Peter.Richardson@durham.ac.uk>

	* Hadronization/PartonicHadronizer.h (Repository): added new class for hadronization of partonic b and c decays.

	* Hadronization/PartonSplitter.h (Repository): changes to the hadronization to ensure only the taggws particles are hadronized.
